# email-type-rs

./: .gitignore  Cargo.toml  README.md
src/: email.rs  error.rs  lib.rs  utils.rs
